fixed issue: reduced breadcrumb spacing from 12px to 6px

--- a/themes/admin/Sea_Green/css/sea_green-rtl.css
+++ b/themes/admin/Sea_Green/css/sea_green-rtl.css
@@ -17551,11 +17551,11 @@ ol.breadcrumb.title-bar-breadcrumb li.active {
 
 .breadcrumb-item + .breadcrumb-item:before {
   color: #ACACAC;
-  padding-left: 12px;
+  padding-left: 6px;
 }
 
 .breadcrumb-item + .breadcrumb-item {
-  padding-right: 12px;
+  padding-right: 6px;
 }
 
 .footer {
