--- a/themes/admin/Sea_Green/css/sea_green.css
+++ b/themes/admin/Sea_Green/css/sea_green.css
@@ -17574,11 +17574,11 @@ ol.breadcrumb.title-bar-breadcrumb li.active {
 
 .breadcrumb-item + .breadcrumb-item:before {
   color: #ACACAC;
-  padding-right: 12px;
+  padding-right: 6px;
 }
 
 .breadcrumb-item + .breadcrumb-item {
-  padding-left: 12px;
+  padding-left: 6px;
 }
 
 .footer {
